Modified front page , Removed Advisors, Add 3D effect to Alumni

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -854,7 +854,8 @@ textarea:focus{background:#f4f4f4; height:250px;}
 }
 
 .portfolio-grid .grid-responsive img {
-  box-shadow: -10px 13px 17px -12px #888888;
+    margin-bottom: 15px;
+    box-shadow: -13px 1px 19px -9px #888888;
 }
 
 /*
