--- a/src/module/index/views/card.css
+++ b/src/module/index/views/card.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   margin: 1rem auto;
-  box-shadow:0px 0px 25px -5px #888;
+  box-shadow:0px 0px 15px -5px #888;
   margin-bottom: 1.6%;
   background: #fff;
   line-height: 1.4;
@@ -18,16 +18,16 @@
 }
 
 .blog-card:hover {
-animation: glow 90ms forwards;
+animation: glow 0.4s forwards;
 }
 
 @keyframes glow{
   from {
-    box-shadow:0px 0px 20px -5px #888;
+    box-shadow:0px 0px 15px -5px #888;
   }
 
   to {
-    box-shadow:0px 0px 15px -5px #888;
+    box-shadow:2px 2px 25px -3px #888;
   }
 }
 
