--- a/src/module/index/views/card.css
+++ b/src/module/index/views/card.css
@@ -7,8 +7,7 @@
   display: flex;
   flex-direction: column;
   margin: 1rem auto;
-  border: 1px #ded5d5 solid;
-  box-shadow:-10px 10px 10px -8px #888888;
+  box-shadow:0px 0px 25px -5px #888;
   margin-bottom: 1.6%;
   background: #fff;
   line-height: 1.4;
@@ -17,6 +16,21 @@
   overflow: hidden;
   z-index: 0;
 }
+
+.blog-card:hover {
+animation: glow 90ms forwards;
+}
+
+@keyframes glow{
+  from {
+    box-shadow:0px 0px 20px -5px #888;
+  }
+
+  to {
+    box-shadow:0px 0px 15px -5px #888;
+  }
+}
+
 .blog-card a {
   color: inherit;
 }
