--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -312,6 +312,11 @@ ul.header-nav{
   float:left;
 }
 
+header .logo > img {
+  float:left;
+  margin-top: 10px;
+}
+
 header .logo > a{
   font-size:23px;
   font-weight:800;
