--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -267,6 +267,9 @@ ul.social-icon a:active{
   color:#c3c3c3;
 }
 
+li.hamberger-menu a.icon {
+  display: none;
+}
 
 .menu-index{
   position: fixed;
@@ -532,7 +535,7 @@ CONTENT
             -o-animation: blink 0.7s infinite;
             animation: blink 0.7s infinite;
         }
-        @-keyframes blink{
+        @keyframes blink{
             0% { opacity:1; }
             50% { opacity:0; }
             100% { opacity:1; }
