Added image sources to JSON Modified Member.Card.js to add relevant links  On branch Archer  Changes to be committed: 	modified:   src/json-files/members.json 	modified:   src/pages/member/Member.Card.js 	modified:   src/pages/member/Member.js 	modified:   src/pages/member/member-card/member-card.css 	modified:   src/pages/member/members.json

--- a/src/pages/member/member-card/member-card.css
+++ b/src/pages/member/member-card/member-card.css
@@ -52,7 +52,8 @@
 .member-about {
   text-align: center;
   margin-top: 10px;
-  color: rgb(37, 37, 37)
+  color: rgb(37, 37, 37);
+  overflow: hidden;
 }
 
 .member-projects-title {
