Fix the drop-down container

--- a/public/assets/css/style-responsive.css
+++ b/public/assets/css/style-responsive.css
@@ -395,9 +395,11 @@
   }
   
   header.boxed .header-margin{
-    width:280px;
+    width:100%;
   }
-
+  .logo{
+    margin-left: 10%;
+  }
   .content .text-intro{
     width:280px;
   }
