--- a/src/pages/project/project.css
+++ b/src/pages/project/project.css
@@ -45,7 +45,7 @@
   }
  
   .by1{
-    border:2px solid rgb(49, 148, 247);
+    border:2px solid lightblue;
     border-radius: 10px;
     margin:15px;
   padding: 15px;
@@ -58,7 +58,7 @@
 
 }
 .by1:hover{
-    background-color:rgb(45, 148, 250);
+    background-color:rgb(69, 154, 238);
     cursor: pointer;
 }
 .madeby{
