Added images on Members page

--- a/src/pages/member/member-card/member-card.css
+++ b/src/pages/member/member-card/member-card.css
@@ -53,7 +53,7 @@
   text-align: center;
   margin-top: 10px;
   color: rgb(37, 37, 37);
-  overflow: ;
+  /* overflow: ; */
 }
 
 .member-projects-title {
