Changed member.json file, added field, added yearOfPassing, sort using yearOfPassing

--- a/src/pages/member/member-card/member-card.css
+++ b/src/pages/member/member-card/member-card.css
@@ -19,6 +19,14 @@
   margin-top: 18px;
 }
 
+div.name h1{
+  min-height: 2em;
+}
+
+div.Description p{
+  min-height: 180px;
+}
+
 .member-name {
   font-weight: 600;
   padding-top: 15px;
