centred the footer

--- a/backup/src-theme-static/assets/css/style.css
+++ b/backup/src-theme-static/assets/css/style.css
@@ -667,7 +667,7 @@ footer{
   line-height: 100px;
 }
 
-#footer-left{text-align:left;}
+#footer-left{text-align:center;}
 
 
 .footer-margin .copyright{
