--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -730,7 +730,7 @@ footer{
   line-height: 100px;
 }
 
-#footer-left{text-align:left;}
+#footer-left{text-align:center;}
 
 
 .footer-margin .copyright{
