--- a/src/pages/project/project.css
+++ b/src/pages/project/project.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-top: 100px;
+  margin-top: 50px;
   justify-content: center;
 }
 
@@ -98,4 +98,11 @@
 
 .effect83 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.projects-grid{
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
