--- a/backup/src-theme-static/assets/css/style.css
+++ b/backup/src-theme-static/assets/css/style.css
@@ -275,7 +275,7 @@ header .logo > a{
   border-bottom: 1px solid #f1f1f1;
 }
 
-header .logo > a:hover{
+header .logo > a:active{
   color:#c3c3c3;
 }
 
