--- a/public/assets/css/member.css
+++ b/public/assets/css/member.css
@@ -11,3 +11,56 @@ center h1{
     font-weight: bold;
     margin: 50px 0 50px 0;
 }
+
+.divisions ul{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+.divisions ul li{
+    margin: 15px 20px;
+    padding: 7px 10px;
+    font-weight: 600;
+    font-size: 1.3em;
+}
+
+.hover-effect{
+    color: black;
+    position: relative;
+    transform-origin: left;
+}
+
+.hover-effect::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 2px;
+    background-color: #c3c3c3;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform 250ms ease-in;
+}
+
+.hover-effect:hover{
+    cursor: pointer;
+    transform: scaleX(1);
+    transform-origin: left;
+}
+.hover-effect:hover::after{
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+center{
+    scroll-margin-top: 100px;
+}
+
+@media (max-width:700px) {
+    .divisions ul{
+        flex-direction: column;
+        align-items: center;
+    }
+}
